[tool.poetry]
name = "goputerpy"
version = "0.1.0"
description = "Python goputer frontend"
authors = ["Oscar Peace <oscar@oscarcp.net>"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.15"
pygame = "^2.6.1"
numpy = "^2.2.4"
certifi = "^2025.8.3"
pyinstaller = "^6.15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
